2004-10-24  Richard Spindler <oracle2025@gmx.de>

 * make distcheck was broken on my new system, fixed it

2004-10-23  Richard Spindler <oracle2025@gmx.de>

 * Fixed Segfault in DocManager

2004-07-15  Richard Spindler <oracle2025@gmx.de>

 * Added Load Last Project Option

2004-07-11  Richard Spindler <oracle2025@gmx.de>

 * Implemented Package loading and saving based on zip/unzip

2004-07-03  Richard Spindler <oracle2025@gmx.de>

 * Added Colours to the Colour-Preferences Listbox

2004-07-02  Richard Spindler <oracle2025@gmx.de>

 * Litte Fix, to prevent crash when setting loop-points, while playback

2004-06-20  Richard Spindler <oracle2025@gmx.de>

 * Added Zoom Funcionality

2004-06-10  Richard Spindler <oracle2025@gmx.de>

 * Fixed Controls not being deleted while loading from File

2004-06-05  Richard Spindler <oracle2025@gmx.de>

 * More the 8 Tracks implemented

2004-05-18  Richard Spindler <oracle2025@gmx.de>

 * GUI converted to a wxDesigner based Layout

2004-04-25  Richard Spindler <oracle2025@gmx.de>

 * big samples won't crash the Program anymore

2004-04-22  Richard Spindler <oracle2025@gmx.de>

 * ha, Undo-Redo finally done :)

2004-04-04  Richard Spindler <oracle2025@gmx.de>

 * Implemented Simple Loop Functionality. (Not quite done yet, but it works)

2004-02-19  Richard Spindler <oracle2025@gmx.de>

 * Official 0.2.0 Release

2004-02-16  Richard Spindler <oracle2025@gmx.de>

 * Added doc/ggseq.htb
 * Added html documentation

2004-02-11  Richard Spindler <oracle2025@gmx.de>

 * Fixed Bug that coused loading an empty arrangement to throw an error-message
 * added help.xpm
 * Various stuff to provide an integrated help-system (not finished though)

2004-02-10  Richard Spindler <oracle2025@gmx.de>

 * Fixed some Stuff in the SetSnap Dialog
 * Fixed the Application Icon on win32
 * increased snap limit to 500000
 * Created an NSIS Script (for win32 Installer)

2004-02-07  Richard Spindler <oracle2025@gmx.de>
