@@ -1,0 +1,12 @@
+# Copyright (C) 2003 Richard Spindler <oracle2025@gmx.de>
+#
+# This file is free software; as a special exception the author gives
+# unlimited permission to copy and/or distribute it, with or without
+# modifications, as long as this notice is preserved.
+#
+# This program is distributed in the hope that it will be useful, but
+# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
+# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
+
+EXTRA_DIST = config.guess  config.sub  install-sh  missing  mkinstalldirs
+
